# GroceryBillSplitter

./: .gitignore  LICENSE.md  README.md  pyproject.toml
billsplitter/: main.py  splitter.py
billsplitter/data_model/receipt/: __init__.py  base.py  item.py  tax.py
billsplitter/data_model/split/: __init__.py  billsplit.py
billsplitter/extractor/: __init__.py  base.py  instacart.py  llm.py
billsplitter/interface/: __init__.py  base.py  cli.py
billsplitter/parser/: __init__.py  base.py  instacart.py  llm.py
billsplitter/splitter/: base.py  cli.py
data/receipts/: Instacart-03-04-2023.html
splitmybill/: flask_app.py  main.py
splitmybill/ai_services/llm/: __init__.py  base.py  factory.py
splitmybill/ai_services/llm/providers/: anthropic.py
splitmybill/billsplitter/: main.py
splitmybill/billsplitter/data_model/receipt/: base.py  tax.py
splitmybill/billsplitter/data_model/split/: __init__.py
splitmybill/billsplitter/interface/: base.py
splitmybill/billsplitter/parser/: __init__.py  base.py
splitmybill/data_model/receipt/: __init__.py  base.py  item.py  tax.py
splitmybill/data_model/split/: __init__.py  billsplit.py
splitmybill/integrations/splitwise/: create.py
splitmybill/interface/: __init__.py  cli.py  telegram_bot.py
splitmybill/parser/: __init__.py  instacart.py  llm.py
